# Genetic-Circuit-Designer

./: .gitignore  CMakeLists.txt  Phase2_Phase3_Complete_Status.md  README.md  RTX_3060_Performance_Report.md  TEST_SUMMARY.md  cpu_benchmark.cpp  gpu_cpu_benchmark.cpp  gpu_device_query.cpp  phase3_gpu_test.cpp  plan.txt
data/benchmarks/: .gitkeep
data/circuits/: .gitkeep
docs/: .gitkeep
examples/: CMakeLists.txt
include/circuit/core/: circuit.h  types.h
include/circuit/ga/: genetic_algorithm.h  genome.h
include/circuit/gpu/: gpu_simulator.h
include/circuit/utils/: utils.h
include/circuit/viz/: visualization.h
src/: CMakeLists.txt  main.cpp
src/ga/: crossover.cpp  fitness_evaluation.cpp  genetic_algorithm.cpp  genome.cpp  mutation.cpp  selection.cpp
src/gpu/: circuit_kernels.cu  genetic_kernels.cu  gpu_memory.cpp  gpu_simulator.cpp
src/utils/: file_utils.cpp  logger.cpp  math_utils.cpp  profiler.cpp
src/viz/: circuit_renderer.cpp  evolution_visualizer.cpp  opengl_utils.cpp  visualization.cpp
tests/: CMakeLists.txt
tests/integration/: main_test.cpp  test_end_to_end.cpp  test_gpu_cpu_comparison.cpp
tests/performance/: main_test.cpp  test_circuit_simulation.cpp  test_genetic_algorithm.cpp  test_gpu_performance.cpp
tests/unit/: main_test.cpp  test_circuit.cpp  test_genetic_algorithm.cpp  test_genome.cpp  test_gpu_simulator.cpp  test_types.cpp  test_utils.cpp  test_visualization.cpp
